# ocarina_vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/shaderlibrary/builtin/: bindless_texture.frag.spv  common.hlsl  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  push_constant.hlsl  texture.vert  texture.vert.spv
src/: CMakeLists.txt
src/GUI/: window.h
src/GUI_impl/: CMakeLists.txt
src/GUI_impl/imGui/: gl_helper.h  glfw_window.cpp  glfw_window.h  sdl_window.cpp  sdl_window.h  widgets.cpp  widgets.h
src/GUI_impl/imGui/glad/: glad.h
src/ast/: function.cpp  op.h  symbol_name.h  type.h  type_desc.h  type_registry.cpp  type_registry.h  variable.h
src/backends/: CMakeLists.txt
src/backends/cuda/: CMakeLists.txt  cuda_bindless_array.cpp  cuda_bindless_array.h  cuda_codegen.cpp  cuda_command_visitor.cpp  cuda_command_visitor.h  cuda_compiler.cpp  cuda_device.cpp  cuda_device.h  cuda_mesh.cpp  cuda_texture.cpp  cuda_texture.h
src/backends/cuda/builtin/: cuda_device_resource.h
src/backends/vulkan/: CMakeLists.txt  dxc_compiler.cpp  dxc_compiler.h  shader_reflection.h  util.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_debug.cpp  vulkan_debug.h  vulkan_descriptorset.cpp  vulkan_descriptorset.h  vulkan_descriptorset_writer.cpp  vulkan_descriptorset_writer.h  vulkan_device.cpp  vulkan_device.h  vulkan_driver.cpp  vulkan_driver.h  vulkan_fence.cpp  vulkan_fence.h  vulkan_frame_sync_config.h  vulkan_index_buffer.cpp  vulkan_index_buffer.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderpass.cpp  vulkan_renderpass.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_vertex_buffer.cpp  vulkan_vertex_buffer.h
src/backends/vulkan/builtin/: bindless_texture.frag  common.hlsl  material.hlsl  mesh.frag  mesh.vert  push_constant.hlsl
src/core/: hash.cpp  header.h  image.cpp  image.h  platform.cpp  profiler.h  small_vector.h  stl.cpp  stl.h  string_util.h  util.h
src/dsl/: debugger.h  dynamic_array.h  env.cpp  func.h  operators.h  polymorphic.h  printer.cpp  printer.h  ref.h  ref_func.h  registrable.h  type_trait.h  var.h
src/ext/: CMakeLists.txt
src/ext/EASTL/: CMakeLists.txt
src/ext/stblib/: CMakeLists.txt
src/ext/tinyexr/: CMakeLists.txt
src/framework/: CMakeLists.txt  async_loader.cpp  async_loader.h  bindless_texture_registry.cpp  bindless_texture_registry.h  bounding_box.h  camera.cpp  camera.h  cmd_record_task.cpp  cmd_record_task.h  enki_task_debug.h  entity_component_system.cpp  entity_component_system.h  frame_resources.cpp  frame_resources.h  framework_ui.cpp  framework_ui.h  frustum.cpp  frustum.h  global_gpu_storage.cpp  global_gpu_storage.h  global_uniform_buffer.h  gltf_async_loader.cpp  gltf_async_loader.h  imgui_renderer.cpp  imgui_renderer.h  imgui_widgets.cpp  imgui_widgets.h  internal_textures.cpp  internal_textures.h  light_component.h  loading_imgui_task.cpp  loading_imgui_task.h  loading_progress_listener.cpp  loading_progress_listener.h  material.cpp  material.h  math.h  mesh.cpp  mesh.h  (+39 more)
src/generator/: cpp_codegen.cpp
src/math/: base.h  basic_traits.h  geometry.h  matrix_types.h  quaternion.h  transform.h  vector_types.h
src/pyexporter/rhi/: export_commands.cpp
src/pyexporter/utils/: export_image.cpp  export_window.cpp
src/rhi/: CMakeLists.txt  bindless_sampler.cpp  bindless_sampler.h  command.cpp  command.h  command_buffer.h  command_queue.cpp  common.h  context.cpp  context.h  descriptor_set.h  device.cpp  device.h  fence.cpp  fence.h  graphics_descriptions.h  imgui_creation.h  index_buffer.cpp  index_buffer.h  params.h  pipeline_state.h  renderpass.cpp  renderpass.h  shader_base.h  vertex_buffer.cpp  vertex_buffer.h
src/rhi/resources/: bindless_array.cpp  bindless_array.h  buffer.h  managed.h  resource.cpp  resource.h  shader.cpp  shader.h  stream.cpp  texture.cpp  texture.h  texture_sampler.h
src/tests/: CMakeLists.txt  test_accel.cpp  test_callable.cpp  test_culling.cpp  test_doc.cpp  test_enkiTS.cpp  test_gui.cpp  test_image3.cpp  test_image_io.cpp  test_kernel.cpp  test_list.cpp  test_load_gltf.cpp  test_pt.cpp  test_raygenkernel.cpp  test_read_buffer.cpp  test_trait.cpp  test_vulkan_bindless.cpp  test_vulkan_offscreen.cpp  test_vulkan_texture.cpp  test_vulkan_triangle.cpp
